src/rendering/opengl/gl_rho.h

	typedef unsigned int GLenum;

	typedef unsigned char GLboolean;

	typedef unsigned int GLbitfield;

	typedef int GLint;

	typedef unsigned int GLuint;

	typedef int GLsizei;

	typedef float GLfloat;

		typedef uint64_t GLuint64;

		typedef struct __GLsync *GLsync;
extern GLenum (CODEGEN_FUNCPTR *_ptrc_glGetError)();
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsEnabled)(GLenum);
extern void (CODEGEN_FUNCPTR *_ptrc_glTexParameterfv)(GLenum, GLenum, const GLfloat *);

#define glTexParameterfv _ptrc_glTexParameterfv
extern void (CODEGEN_FUNCPTR *_ptrc_glTexParameteri)(GLenum, GLenum, GLint);

#define glTexParameteri _ptrc_glTexParameteri
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsTexture)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsBuffer)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsQuery)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glUnmapBuffer)(GLenum);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsProgram)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsShader)(GLuint);
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform1f)(GLint, GLfloat);

#define glUniform1f _ptrc_glUniform1f
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform1fv)(GLint, GLsizei, const GLfloat *);

#define glUniform1fv _ptrc_glUniform1fv
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform1i)(GLint, GLint);

#define glUniform1i _ptrc_glUniform1i
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform1iv)(GLint, GLsizei, const GLint *);

#define glUniform1iv _ptrc_glUniform1iv
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform2f)(GLint, GLfloat, GLfloat);
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform3f)(GLint, GLfloat, GLfloat, GLfloat);
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform3fv)(GLint, GLsizei, const GLfloat *);

#define glUniform3fv _ptrc_glUniform3fv
extern void (CODEGEN_FUNCPTR *_ptrc_glUniform4f)(GLint, GLfloat, GLfloat, GLfloat, GLfloat);

#define glUniformMatrix4fv _ptrc_glUniformMatrix4fv
extern void (CODEGEN_FUNCPTR *_ptrc_glUseProgram)(GLuint);

#define glUseProgram _ptrc_glUseProgram
extern GLenum (CODEGEN_FUNCPTR *_ptrc_glCheckFramebufferStatus)(GLenum);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsEnabledi)(GLenum, GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsFramebuffer)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsRenderbuffer)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsVertexArray)(GLuint);

extern GLenum (CODEGEN_FUNCPTR *_ptrc_glClientWaitSync)(GLsync, GLbitfield, GLuint64);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsSync)(GLsync);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsSampler)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsTransformFeedback)(GLuint);
extern GLboolean (CODEGEN_FUNCPTR *_ptrc_glIsProgramPipeline)(GLuint);