src/rendering/opengl/gl.adb


      Error := Get_Error;

      Interfaces.C.Strings.Free (C_Source);

      if Error /= 0 then
         raise Program_Error with GL.Debug.Image (Error);
      end if;

   end Shader_Source;

   ------------------
   -- Tex_Image_2D --
   ------------------

   procedure Tex_Image_2D
     (Target          : GLenum;
      Level           : Int;
      Internal_Format : Int;
      Width           : Sizei;
      Height          : Sizei;
      Border          : Int;
      Format          : GLenum;
      Ptype           : GLenum;
      Pixels          : System.Address)
   is
      type Lib_glTeximage2D is access
        procedure
          (Target          : GLenum;
           Level           : Int;
           Internal_Format : Int;
           Width           : Sizei;
           Height          : Sizei;
           Border          : Int;
           Format          : GLenum;
           Ptype           : GLenum;
           Pixels          : System.Address);
      pragma Convention (C, Lib_glTeximage2D);
      glTeximage2D : Lib_glTeximage2D;
      pragma Import (C, glTeximage2D,
                     "_ptrc_glTexImage2D");
   begin
      glTeximage2D
        (Target,
         Level,
         Internal_Format,
         Width,
         Height,
         Border,
         Format,
         Ptype,
         Pixels);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Tex_Image_2D;

   -------------------
   -- Tex_Parameter --
   -------------------

   procedure Tex_Parameter
     (Target          : GLenum;
      Parameter_Name  : GLenum;
      Parameter_Value : GLenum)
   is
      type Lib_glTexParameteri is access
        procedure
          (Target          : GLenum;
           Parameter_Name  : GLenum;
           Parameter_Value : GLenum);
      pragma Convention (C, Lib_glTexParameteri);
      glTexParameteri : Lib_glTexParameteri;
      pragma Import (C, glTexParameteri,
                     "_ptrc_glTexParameteri");
   begin
      glTexParameteri
        (Target,
         Parameter_Name,
         Parameter_Value);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Tex_Parameter;

   -------------------
   -- Tex_Parameter --
   -------------------

   procedure Tex_Parameter
     (Target          : GLenum;
      Parameter_Name  : GLenum;
      Parameter_Value : access GLfloat)
   is
      type Lib_glTexParameterfv is access
        procedure
          (Target          : GLenum;
           Parameter_Name  : GLenum;
           Parameter_Value : access GLfloat);
      pragma Convention (C, Lib_glTexParameterfv);
      glTexParameterfv : Lib_glTexParameterfv;
      pragma Import (C, glTexParameterfv,
                     "_ptrc_glTexParameterfv");
   begin
      glTexParameterfv
        (Target,
         Parameter_Name,
         Parameter_Value);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Tex_Parameter;

   -------------
   -- Uniform --
   -------------

   procedure Uniform
     (Location : Uint;
      Value    : Int)
   is
      type Lib_Proc is access
        procedure (Location : Uint; V0 : Int);
      pragma Convention (C, Lib_Proc);
      Proc : Lib_Proc;
      pragma Import (C, Proc,
                     "_ptrc_glUniform1i");
      Error : GLenum;
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glUniform1i" & Location'Img & Value'Img);
      end if;
      Proc (Location, Value);
      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with GL.Debug.Image (Error);
      end if;
   end Uniform;

   -------------
   -- Uniform --
   -------------

   procedure Uniform
     (Location : Uint;
      Value    : GLfloat)
   is
      type Lib_1 is access
        procedure (Location : Uint;
                   Value_1  : GLfloat);
      pragma Convention (C, Lib_1);
      Proc_1 : Lib_1;
      pragma Import (C, Proc_1, "_ptrc_glUniform1f");
   begin
      if Debug_Active then
         Ada.Text_IO.Put
           ("glUniform1f" & Location'Img & " ");
         GL.Debug.Put (Value);
         Ada.Text_IO.New_Line;
      end if;

      Proc_1 (Location, Value);

   end Uniform;

   -------------
   -- Uniform --
   -------------

   procedure Uniform
     (Location : Uint;
      Value    : Array_Of_Float)
   is
      type Lib_1 is access
        procedure (Location : Uint;
                   Value_1  : GLfloat);
      type Lib_2 is access
        procedure (Location : Uint;
                   Value_1  : GLfloat;
                   Value_2  : GLfloat);
      type Lib_3 is access
        procedure (Location : Uint;
                   Value_1  : GLfloat;
                   Value_2  : GLfloat;
                   Value_3  : GLfloat);
      type Lib_4 is access
        procedure (Location : Uint;
                   Value_1  : GLfloat;
                   Value_2  : GLfloat;
                   Value_3  : GLfloat;
                   Value_4  : GLfloat);

      pragma Convention (C, Lib_1);
      pragma Convention (C, Lib_2);
      pragma Convention (C, Lib_3);
      pragma Convention (C, Lib_4);

      Proc_1 : Lib_1;
      Proc_2 : Lib_2;
      Proc_3 : Lib_3;
      Proc_4 : Lib_4;

      pragma Import (C, Proc_1, "_ptrc_glUniform1f");
      pragma Import (C, Proc_2, "_ptrc_glUniform2f");
      pragma Import (C, Proc_3, "_ptrc_glUniform3f");
      pragma Import (C, Proc_4, "_ptrc_glUniform4f");

      Error : GLenum;
   begin

      if Debug_Active then
         Ada.Text_IO.Put
           ("glUniform" & Integer'Image (Value'Length) (2)
            & "f" & Location'Img & " ");
         GL.Debug.Put (Value);
         Ada.Text_IO.New_Line;
      end if;

      case Value'Length is
         when 1 =>
            Proc_1 (Location, Value (Value'First));
         when 2 =>
            Proc_2 (Location, Value (Value'First), Value (Value'First + 1));
         when 3 =>
            Proc_3 (Location,
                    Value (Value'First),
                    Value (Value'First + 1),
                    Value (Value'First + 2));
         when 4 =>
            Proc_4 (Location,
                    Value (Value'First),
                    Value (Value'First + 1),
                    Value (Value'First + 2),
                    Value (Value'First + 3));
         when others =>
            raise Program_Error with
              "invalid argument to glUniform";
      end case;

      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with GL.Debug.Image (Error);
      end if;
   end Uniform;

   -------------------------
   -- Uniform_Float_Array --
   -------------------------

   procedure Uniform_Float_Array
     (Location : Uint;
      Value    : Array_Of_Float)
   is
      type Lib_1 is access
        procedure (Location : Uint;
                   Count    : Sizei;
                   Value    : access constant GLfloat);
      pragma Convention (C, Lib_1);
      Proc_1 : Lib_1;
      pragma Import (C, Proc_1, "_ptrc_glUniform1fv");
      Count : constant Sizei := Sizei (Value'Length);

      Error : GLenum;

   begin
      if Debug_Active then
         Ada.Text_IO.Put
           ("glUniform1fv" & Location'Img & " ");
         GL.Debug.Put (Value);
         Ada.Text_IO.New_Line;
      end if;

      Proc_1 (Location, Count, Value (Value'First)'Access);

      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with GL.Debug.Image (Error);
      end if;
   end Uniform_Float_Array;

   ----------------------------------
   -- Uniform_Float_Vector_3_Array --
   ----------------------------------

   procedure Uniform_Float_Vector_3_Array
     (Location : Uint;
      Value    : Array_Of_Float)
   is
      type Lib_1 is access
        procedure (Location : Uint;
                   Count    : Sizei;
                   Value    : access constant GLfloat);
      pragma Convention (C, Lib_1);
      Proc_1 : Lib_1;
      pragma Import (C, Proc_1, "_ptrc_glUniform3fv");
      Count : constant Sizei := Sizei (Value'Length) / 3;

      Error : GLenum;

   begin
      if Debug_Active then
         Ada.Text_IO.Put
           ("glUniform3fv" & Location'Img & " ");
         GL.Debug.Put (Value);
         Ada.Text_IO.New_Line;
      end if;

      Proc_1 (Location, Count, Value (Value'First)'Access);

      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with GL.Debug.Image (Error);
      end if;
   end Uniform_Float_Vector_3_Array;

   -----------------------
   -- Uniform_Int_Array --
   -----------------------

   procedure Uniform_Int_Array
     (Location : Uint;
      Value    : Array_Of_Int)
   is
      type Lib_1 is access
        procedure (Location : Uint;
                   Count    : Sizei;
                   Value    : access constant Int);
      pragma Convention (C, Lib_1);
      Proc_1 : Lib_1;
      pragma Import (C, Proc_1, "_ptrc_glUniform1iv");
      Count : constant Sizei := Sizei (Value'Length);

      Error : GLenum;
   begin
      if Debug_Active then
         Ada.Text_IO.Put
           ("glUniform1iv" & Location'Img & " ");
--         GL.Debug.Put (Value);
         Ada.Text_IO.New_Line;
      end if;

      Proc_1 (Location, Count, Value (Value'First)'Access);

      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with GL.Debug.Image (Error);
      end if;
   end Uniform_Int_Array;

   --------------------
   -- Uniform_Matrix --
   --------------------

   procedure Uniform_Matrix
     (Location  : Uint;
      Count     : Sizei;
      Transpose : GLboolean;
      Matrix    : Array_Of_Float)
   is
      procedure Rho_Uniform_Matrix_F
        (Location                                       : Uint;
         Count                                          : Sizei;
         Transpose                                      : GLboolean;
         A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P : GLfloat);
      pragma Import (C, Rho_Uniform_Matrix_F, "Rho_uniform_matrix_f");
      Error : GLenum;
   begin

      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glUniformMatrix4fv" & Location'Img & Count'Img & Transpose'Img);
         for Row in 1 .. 4 loop
            Ada.Text_IO.Put ("  |");
            for Col in 1 .. 4 loop
               Ada.Float_Text_IO.Put
                 (Float (Matrix ((Col - 1) * 4 + Row)), 3, 3, 0);
            end loop;
            Ada.Text_IO.Put_Line ("|");
         end loop;
      end if;

      Rho_Uniform_Matrix_F
        (Location, Count, Transpose,
         Matrix (1), Matrix (2), Matrix (3), Matrix (4),
         Matrix (5), Matrix (6), Matrix (7), Matrix (8),
         Matrix (9), Matrix (10), Matrix (11), Matrix (12),
         Matrix (13), Matrix (14), Matrix (15), Matrix (16));
      Error := Get_Error;
      if Error /= 0 then
         raise Program_Error with Error'Img;
      end if;
   end Uniform_Matrix;

   -----------------
   -- Use_Program --
   -----------------

   procedure Use_Program
     (Program : Uint)
   is
      type Lib_glUseProgram is access
        procedure
          (Program : Uint);
      pragma Convention (C, Lib_glUseProgram);
      glUseProgram : Lib_glUseProgram;
      pragma Import (C, glUseProgram,
                     "_ptrc_glUseProgram");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glUseProgram: " & Program'Img);
      end if;
      glUseProgram
        (Program);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Use_Program;

   ------------------------------
   -- Vertex_Attribute_Divisor --
   ------------------------------
